Update from Google Doc

--- a/卒論_0607.md
+++ b/卒論_0607.md
@@ -1,324 +1,324 @@
-??? ???????
+第１章 卒論を書く目的
 
 2024/05/22
 
 
 
-?????????????????????????????????????????????????????????????????????????????????????????
+筆者はこれまで、発達障害によるさまざまなハンデをデジタルツールの活用で埋め合わせをしようと努力してきた。それにより改善した困難についてまとめてみたいと思い、卒論を書くことにした。
 
 
 
-???????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+元々プログラミングが好きで、ツールをあれこれ試すのが楽しくて、どんどん進めてきた面がある。しかし、困っている人にすすめると大抵「何を言っているんだ?」とポカンとされてきた。そんな訳で、自分には有用でも人の役には立たないだろうと思っていた。
 
 
 
-??????????????????????????????????????????????????????????????
+それに対し、広瀬先生のアドバイスは「エベレストに登った人の話が面白いようにマニアックな話の中に面白さがある」という事だった。
 
 
 
-????????????????20??IT?????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+そうして思い出してみると、やはり20代でIT業界に入ったことの影響が大きい。確かにブラック企業ばかりで問題はたくさんあった。そうした現場で愛想笑いをして可愛がられ、問題を起こしては追い出され、時にはチャンスをつかみ、あっという間に蹴落とされ、あるいは呼ばれて掛け持ちし、休む間もなく働いた時期もあった。
 
 
 
-?????????????????????????????????????????????????????????DIY????????????????????????????????????????????????
+デジタルツールが豊富にあり、どのように使っても良かった。問題があればデジタルツールを駆使しプログラムを書き、何でもDIYで解決した。学習障害、注意欠陥多動障害、コミュニケーション障害に対してユニバーサルな環境だった。
 
 
 
-????????????????????????????????????????????????????????????????????????????????????????????????
+プログラマーは紙が苦手だよねと書類仕事を免除され、少々のずれや身だしなみや礼儀作法を見逃してもらえるとうまく働ける。しかし、運良く理解が得られても、人事異動や環境の変化で簡単に失われてしまう。
 
 
 
-??????IT???????????????????????????????????IT????????????????????????????????????????????????????????????????????????
+それがいやでIT業界からすっかり足を洗って、営業、農業、ボランティア、研究、福祉、またIT、結局どこにいっても同様の問題が壁となった。人間関係がどうにもならないのだ。そこで人間の気持ちをわかるために放送大学に入り、心理の勉強を始めた。
 
 
 
-??????????????????????????????????????????????????????????????????????????????????????????????????????????????
+ここでの壁は申請、申請、申請だった。いつも何が何だかさっぱりわからず混乱していた。困り果てて相談に行った事もあったが、大学の授業程度の読み書きができる人が対象だから読んでわからなければダメですねと、追い返されてしまった。
 
 
 
-?????????????????????????????????????????iPAD??????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+この頃は、デジタルツールもたいしたものは使っていない。せいぜい教科書をスキャンしてiPADにいれていたくらいだ。この頃は学習障害について意識はしていなく、紙は読みにくいので当然のようにスキャンしていたにすぎない。そのうち面倒になってラジオ科目だけを流し聞きして試験はギリギリで通ったり、落ちたり、試験会場に辿り着かなかったりしていた。
 
 
 
-?????????????????????????????????????????????????????????????????????????????
+数年がたち、障害者・障害児心理学を履修したとき「合理的配慮を申請すればいいのでは・・・？」と思いつき、相談したところ、今度は無事配慮を受けることができた。
 
 
 
-??????????????????????????????????????????????????????????????? ?????
+苦手としていた申請関係も、こうしたい希望が、申請一式で実現できているかをチェックしてもらうことでクリアすることができた。（４章 放送大学）
 
 
 
-???????????????????????????????????????????????????????? ????? ?
+苦手な事をリストアップし積極的に解消していくのもこの頃からだ。この時に力になったのがデジタルツールだった。（３章 自分の体験 ）
 
 
 
-?????????????????????????
+その後は、びっくりするほどスムーズに学習が進んだ。
 
 
 
-????????????????????????????
+・心理の学習が進んだことで、人間の特性を大まかに理解した
 
-??????????????????
+・並行して受けた認知行動療法が効いた
 
-?????????????????????????????
-
-
-
-????????????????????????????
+・難しい事をデジタルツールの活用でクリアする事が面白かった
 
 
 
-????????????????????????????????????????????????????????????????????????????????????
+これらの要因がうまく噛み合ってきたのでは？と考えている。
 
 
 
-???????
-
-?????
-
-?????????? (12,13)
-
-?????
-
-?????????? (14)
-
-?????
+そして、いま運良くまとまった時間があるので、これらが何故うまくいったのかを分析し、改善した事や改善していない事をまとめて、後続の皆様の一助となれたら幸いだと考えている。
 
 
 
+発達障害の概念
+
+あとでかく
+
+欧米の発達障害の経緯 (12,13)
+
+あとでかく
+
+日本の発達障害の経緯 (14)
+
+あとでかく
 
 
-????????
+
+
+
+第２章　先行研究
 
 2024/05/28
 
 
 
-???????????????????????????????
+先行研究として中邑賢龍の発達障害の子を育てる本をとりあげたい。
 
 
 
-???????????????????????????
+子供の発達障害の本は種類も量も豊富でとても参考になる。
 
-????????????????????????????????????????????????????????????????????
-
-
-
-??????????????????????????????????????????????????????????????????????????????
+しかし、「そうなる前に、その子に合った学び方を考えましょう。」のように、大人の当事者が読むには辛い記述がよくある。心して読む必要がある。
 
 
 
-???????????????????????????
+この本には、生活、学習、将来、社会、さまざまな困難をデジタルツールを活用する事でどんどん解決し、その子の能力を発揮していきいきと人生を歩む姿が描かれていた。
 
 
 
-1. ?????????????????????
-
-2. ???????????????????
-
-3. ??????????????
-
-4. ????????????????
+この本のトピックスをまとめると、およそ次のようになる。
 
 
 
-?????????????????????????????????????????????????????????????????????????????????????????????????????????????
+1. 発達障害があるとどのような困難がありうるか
+
+2. デジタルツールの活用で学びやすくなる例
+
+3. 障害の社会モデル、合理的配慮
+
+4. その結果、どんな未来がありえるか
 
 
 
-???????????????????????????????????
+この子はダメだとがっかりしている親にとって希望を持てるように励ましつづける内容になっている。一方で、現在の学校教育に参加するために、当事者とその親にたいへんな努力を要求している。学校側もさまざまな配慮を行う必要がある。
 
 
 
-??????????????????????????????????????????Nothing About us without us????????????
+こうした問題に、触れないように書かれている。これは意図的なのだろうか？
 
 
 
-????????????????????????????????????????????????????????????????????????????
+合理的配慮の解説では、これを求めるプロセスが「私たちのことを私たち抜きで決めないで（Nothing About us without us）」そのものだと思った。
 
 
 
-??????????UDL???????????UDL???????????????????????????????????
+しかし、ユニバーサルではないカリキュラムに参加するには、後付けでとてつもない手間とお金がかかる。しかも、親にやる気がなければ子どもは支援を受けられない。
 
 
 
-??????????????????????????????????????????????????
+ユニバーサルな教育、UDLが必要だ。アメリカではUDLを実施してカバーしきれない場合に個別に相談して合理的配慮を行うとある。
 
 
 
-??????????????????????????????????????????????????????????????????????????????????????????????????????
+日本では、全てのケースに個別の相談からの合理的配慮となっており、これが双方にとって負担になっている。
 
 
 
-?????
-
-????????????????
+自分自身、何度も「配慮」をお願いすることに心理的負担を感じている。近年、「合理的配慮ではなく、合理的調整と呼ぶべき」という意見を読み、自分自身もへり下ってお願いをする「配慮」に負担を感じているなと思った。
 
 
 
+各章の感想
+
+長くなるのでリンク先に分けました
 
 
-??????????????
+
+
+
+第３章　自分の体験に基づいて
 
 2024/05/29
 
 
 
-1. ?????????
+1. 発達障害による困難
 
-2. ?????????
+2. のりこえられたもの
 
-3. ICT??????????
+3. ICTでのりこえられたもの
 
-4. ???????????????
+4. 合理的配慮でのりこえられたもの
 
 
 
-??
+——
 
 
 
-?. DSM5??????????????????
+１. DSM5の分類を参考に、困難を分類して考える
 
 
 
-?????
+①知的障害
 
-???????????IQ50??????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+調子が悪い時に計ったらIQ50となった事がある。この時は図形も読み書きもまるで無理だった。トラブルが起きても対処しきれず雪だるま式に問題が膨れ上がる。こういう時は、焦るけれど動かないほうがいいとだんだん分かってきた。問題は１日の中で頻繁にダウンしている時間とアップしている時間がある事だ。目の前の人が一生懸命説明してるのに、ダウンしている時はまったく理解できない。それを悟られないように必死で愛想よくふるまう。これがトラブルを呼び込んでしまう。なので、なるべくアップしている時しか人に会わないようにしている。なかなか理解されることがない。
 
 
 
-?????
+②学習障害
 
-?????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+・文字が踊って読めなくなる事がある。だけど読書は大好きだ。電子書籍だとフォントや背景色を変えられるので大変助かる。放送大学の教材はスマートフォンで写真にとって読んでいたが、一昨年からテキストデータで教材をもらえる事になり学習のハードルがぐんとさがった。紙の本も環境が良ければ読める。
 
 
 
-??????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+・字がうまくかけない。だんだん斜めになり、合体し、謎の文字を書いている。前後左右に十分スペースを取る、原稿用紙に一文字ずつ書くとまあまあ読める。パソコンやスマホが普及して助かっている。メモはスマホ、ノートはパソコンでとっている。
 
 
 
-???????????????????????????????????????????????????????100???????????????????????????????????????????????????????????20???????????????????????
+・計算はしょっちゅう間違える。足し算引き算で間違える。プログラミングをはじめて一桁の足し算で間違うのはまずいと100マス計算で練習した。趣味でゆっくり数学を解くのは結構楽しい。電卓を使えるし、間違ったところを遡って推理するのも面白い。20年目にして初歩からの数学をやっている。楽しい。
 
 
 
-????????????
+③コミュニケーション障害
 
-?????????????????????????????????????????????????????????????????????????????????????????????
+・とても苦労している。顔と名前が覚えられない、気が利かない、空気を読まず行動した結果、顔を潰してしまう。裏切りや攻撃に気が付かない。協調した行動がとれない。いつのまにか一人になっている。
 
 
 
-??????????????????????????????????????????????????????????????????????????????????????????????????
+・人の気持ちがわからない。悲しいのか怒っているのか楽しいのか、感情を取り違えてしまう。心の理論が違うのかもしれない。同じ体験をしても同じ写像を結ばないので、共感を求められた時は注意して聞いている。
 
 
 
-?????????????????????????????????????????????????????????????????????????????????????????????????????????????
+・人を観察していると、わずかな体の動き、目線、服装などで、衝突を回避している。ネコみたいだと思う。私にはこれができない。ヒゲを切ったネコみたいにあっちこっちにぶつかってしまう。それがコミュニケーション障害なんだと思う。
 
 
 
-??????????????????????????????????????????????
+・トラウマが対人関係を邪魔している事がある。カウンセリングと投薬で少しずつ消しているところ。
 
 
 
-????????????????????????????????????????????????????????????????????????????????????????????????
+・一方で、その場限りのコミュニケーションはできるようになった。旅先で祭りに参加し、知らないアーティストのライブの最前列に行く。しかし顔が覚えられないのでコミュニケーションを継続する事が難しい。
 
 
 
-?????????????????????????????????????????????????
+・会話がキャッチボールだとしたら、一対一はなんとかなるが、多数対多数のゲームに入れないという感じ。
 
 
 
-??????????
+④自閉症スペクトラム
 
-?????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+・列車がすき、規則性がすき、こだわりが強い、感覚過敏がある。パジャマは数年同じものを着ている。気に入った服をいつでも着ていたい。メイクが苦手だ。なるべく自分が良いようにして、人と会うときはなるべく合わせる。合わせるべきハードルが高い場、例えば式典にはなるべく出ない。
 
 
 
-????????????????????????????????????????????????????????????????????
+・いま何をやっているかが分からなくなり混乱してしまう。これはタイマーやタスクリストの活用で、時間や環境を構造化することで解消しつつある。
 
 
 
-???????????????????????????????????????????????????????????????????????????????????????
+・食べ物のブームに狂乱する事がある。ポテトチップなら、コンビニやスーパーで見かけるたびに買ってしまう。喉から手がでて鷲掴みにするような感覚で、これに逆らうのは自力では難しい。
 
 
 
-?ADHD
+④ADHD
 
-?????????????????????????????????????????????????????????????????
+・気を抜くと手足がばたばたしている。アメリカに行ったら多動が目立たないのが面白かった。気をまぎらわす手遊びグッズ、薬も効いている。
 
-????????????????????????????????????????????????????????????????????????????????????
+・ふざけていると思われがちで、ハラスメントに遭いやすい。カウンセリングに定期的に通い、現状のモニタリングをしている。もったいなくても場がダメになりそうなら早めに逃げる。
 
-???????????????????????????????????????SSRI?
+・リタリンを飲んだらあっという間に片付けが進んでおどろいた。いまはコンサータとSSRI。
 
 
 
-?????
+⑤二次障害
 
-??????????????????????????????????????????????????????????????????
+かつてあった事が、今ここであった事のように割り込みをかけてくる事がある。これには投薬が効いていて驚いた。カウンセリングも受けている。
 
-???????????
+⑤その他、複合的な要因
 
-????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????(???????????????????
+・時間感覚の欠如が最も困難だと感じている。時間に遅れる、早まる、日程を間違う、スケジュールを立てられない、いつも焦って時間に追われる感じがしてイライラしてしまう、など。このため数年かけて、タイマーで日常動作を測って必要な時間を割り出し、タスクリストを作りリマインドを自動化し、定期的にスケジュールを確認しタスクを最適化するようにしている。これらのツールが使えないと、あっという間に元通りである。もしかして人類の感覚のうち時計ができてから進化がはじまった後発の感覚だからかもしれない。そして、デジタルツールにより解決しやすいのも、時間感覚の欠如だった。後述する。(→自分自身のデジタルツール活用体験記）
 
 
 
-?????????????????????????????????????????????????????????????????
+・眠りすぎる。歩きながら食べながら眠ってしまう。街中に横になれるスペースがほしい。やっと見つけたベンチがいじわるだとがっかりする。
 
 
 
-?????????????????????????????????????????????????????????????????
+・仕事中に眠くなる。５分で済めばいいけれど１時間２時間と眠ってしまう。国会議員が居眠りを糾弾されているニュースを見て逃げたくなる。
 
 
 
-???????????????????????????????????????????????????????????
+・電車を乗り間違う。広告が面白くて、景色がよくて、おしゃべりが気になって降り損なう。飛行機や新幹線に何度も遅れている。
 
 
 
-?????????????????????????
+デジタルツールで解消しやすい障害、解消しにくい障害
 
-(2024/05/31??)
+(2024/05/31追記)
 
-?????????????????????
+以上をざっくりまとめると次のようになった。
 
-???????????????????????????
+学習障害、時間知覚の障害ーデジタルツールで改善しやすい
 
-??????????????????????????????
+注意欠陥障害、生活全般ーデジタルツールで改善可能な問題もある
 
-????????????????????????????????
+多動、睡眠、コミュニケーション障害ーデジタルツールでは改善しない
 
 
 
-?????
+ーーーーー
 
-?.
+２.
 
-??????????????
+内容いっしょなのでリンクのみ
 
-?????
+ーーーーー
 
 
 
 
 
-????????
+第４章　放送大学
 
 2024/05/30
 
 
 
-????????????????????????????????????????????????????????????????????????????????
+入学した当初は混乱するばかりだったが、心理学の学習が進み、デジタルツールで学習障害をカバーし、時間を構造化することで、だんだんスムーズに学習できるようになった。
 
 
 
-??????????????????????????????????????????????????????????????
+特に障害者・障害児心理学の履修をきっかけに、学習の困難さを相談する事になり、人生初の合理的配慮を受ける事になった事が大きい。
 
 
 
-???????????????????????????????
+・申請関係の手助けにより、スムーズに手続きが進むようになった。
 
-?????????????????????????????????????
+・テキストデータと音声の組み合わせが、学習障害に対し特効薬のように効いた。
 
-??????????????????????
+・合理的配慮は話し合いをする権利だと知った。
 
 
 
@@ -326,279 +326,279 @@
 
 
 
-???????
+入学当初の混乱
 
 
 
-????????????????????????
+放送大学に入学した、その当初は大変混乱していた。
 
 
 
-?????????????????
+・自分で勉強するペースをつかめない
 
-??????????????
+・シラバスの意味がわからない
 
-???????????????
+・面接授業の存在を認知できない
 
-???????????????
+・通信指導の存在を認知できない
 
-?????????????
+・試験の日程を認知できない
 
-?????????
+・試験会場を間違う
 
-?????????
+・試験時間を間違う
 
-???????????????
+・授業の申し込み手続きを間違う
 
-????????????????
+・２単位足りずに卒業できず再入学
 
-????????????????????????
+・卒論に申し込んだのに自動的に卒業になり再々入学
 
 
 
-?????????????????????????????????
+はじめの数年は手続きに混乱して単位を落とすなどしょっちゅうだった。
 
 
 
-?????????????????????????????????????????????????????????????????????????????????????????????
+心理コースの授業を受けるうちに、自分の心のクセ、間違うパターン、認知の範囲と外れるパターンが見えてきた。数年たつうちに手続きにも慣れ、だんだんしっかりと授業を受けられるようになってきた。
 
 
 
-??????????????????????????????????????????????????????????????????????????????????????????
+このころ、もよりの学習センターで合理的配慮は可能か相談したが、放送大学は障害者に差別をしない、読み書きできる事が条件なので、それができるなら特別なことはなにもない、とのことだった。
 
 
 
-???????????????
+合理的配慮により困難が解消した
 
 
 
-2020???????????????Web????????????????????????????
+2020年からはコロナ禍の影響で試験がWebで受けられる事になり、会場・日程・時間の困難が消滅した。
 
 
 
-2022????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+2022年は障害者・障害児心理学を受講した。自分も合理的配慮をお願いできるのではと考え、イベントで行った文京学習センターに相談した。そうしたところ、発達障害の方から配慮をお願いされるのは初めてなので、まずは話を聞かせてほしいと相談の場が開かれた。そこで診断書を持参して、スタッフの皆様、心理士の方に見て頂き、なるほどこうした障害があるならば、こうした支援ができますといくつか提案をいただいた。
 
 
 
-??????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+いま大変助かっているのが、教科書のテキストデータの提供だ。読みやすい背景、フォントにして、適宜改行を入れ、自分専用の教科書を作って学習している。これに音声として放送授業を聞くと驚くほどスムーズに学習が進んだ。一方、テレビ放送を見続けるのは相変わらず難しく、ほぼ音声のみを聞いている。この点ラジオ放送は音声だけで番組が完結するのでありがたい。ラジオ番組があればそちらを優先して受講している。
 
 
 
-???????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+面接授業では、手足がじたばたする、衝動的に立ち去る事がある、眠ってしまう事があるかもしれないと事前に伝えている。落ち着く薬を飲んでいくので、ほぼ問題にはならない。以前、授業中にウトウトしてつまらないなら出ていってと言われた事がある。知らない先生にとっては大変傷つく行動なのだ。事前にそういう事がありうるけれど、授業がつまらないせいではないと、ある程度の了解があれば安心して授業を受けられる。
 
 
 
-??????????????????????????NG??????????OK??????????????????????????????????????????????????????????????????????NG????????????????????????????????????????????????????
+また、録音・録画のお願いをしている。録画はどの先生もNGだったが、録音はほぼOKだった。一名だけ録音されていると自由に話せなくなるという方がいた。その気持ちもわかる。この授業では録音をしなかった。また、授業によっては録音NGの教材を使う事もある。その時は全力で集中し、欠けた所は周囲の人に聞いて埋める。１時間程度なら何とかなる。
 
 
 
-????????????????????????????????????????????????????????????????????????????????????????????????????
+また、手続きがとにかく抜けてしまうので、単位の申請書類のチェックをお願いしている。こうしたいという希望が、申請した手続きで可能になっているかの確認をしてもらう。これで日程、単位の問題はほぼなくなった。
 
 
 
-?????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+合理的配慮のおかげで、学習がスムーズに進むようになった。私の場合、身体的にも、読み書きと一対一のコミュニケーションにも障害がないので、何の支援をして良いかわからない所からのスタートだった。診断書を回し読みされるのは心理的に抵抗が強かったけれど、困難さを専門の方に理解していただき、スタッフの皆様と共有できたおかげで的確な支援をして頂けた。
 
 
 
-??????????????????????????????????????????????????????????????????????????
+これも心理と教育コースを数年かけて卒業し知識と交渉のバリエーションを十分に得た結果といえる。入学当初の私では無理だったろう。現に一度は断られている。
 
 
 
-????????????????????????????????????????????????
+この支援を入学当初から受けられたら、あるいは混乱なくスムーズに理解できるメニューだったらと思う。
 
 
 
-????????????2.5%????????????????7000????2000?????????????????????60???????20%??????????????????????????????????????????
+発達障害の有病率は人口の2.5%だという。放送大学の学生数は８万7000人なので2000人余りの人が対象になっているはずだ。また、60代以上の学生が20%なので、およそ２万人の人がさまざまな困難をかかえながら学習を進めていると推定される。
 
 
 
-???????????????????????????????????????????????????
+この人たちが、難しいな、諦めようかと思う前に、スムーズに学習できるよう環境を整備できたらいいなと思う。
 
 
 
-?2024/05/31?6/1???
+（2024/05/31、6/1追記）
 
-????????
+放送大学への提案
 
-????????????????????????????????????????????????10???????????????????????????20???????????????????????????????????????????????
+放送大学のテキストデータと音声教材の組み合わせは、私の学習障害に対し特効薬のように効いた。これが10代の頃にあれば、ハンデなく受験や進学に活かせたと思う。20代の最初の大学生活においても予め放送大学で予習しておけば、混乱することもなかったのではと思う。
 
 
 
-????????????????????????????????????????????????????????????????????????????????????
+放送大学の教科書一式が揃った本棚。あれがいい。混乱しがちな私にとって、世界各地の大学で学べる事が構造化されており、目的の知識に迷いなく辿り着ける事が、大変助けになった。
 
 
 
-???????????????????????????????
+放送大学と教育機関や企業や団体との連携ができたらいいなと思う。
 
 
 
-???????????????????????????????????????????????????????????????????????????????????????????
+もし、中学・高校にあれば、少々ハードルが高いだろうが、興味関心に従って学習を進める道標になる。この先生に習いたい、この事をさらに学びたい、という動機で進学先を決める助けになるだろう。
 
 
 
-????15??????????????????????????????????????
+加えて、15歳から、どこの大学でも使える単位を取る事ができる、この事をもっと周知したい。
 
 
 
-????????????????????????????????????????????????????????????????????????????????????????
+皆と同じペースで進めない、早かったり遅かったりする子にとって、この仕組みはとても助けになる。不登校やひきこもりで悩んでいる子も、できる所から単位をとっておけば、将来の役に立つ。
 
 
 
-????????????????????????????????????????????????????????????????????????????????????
+営業先に企業や教育機関を加えてはどうだろう。裾野を広げるのだ。その中に学習障害向けのパンフレットがあれば、学習に障害を抱えるすべての人たちにとって福音となることだろう。
 
 
 
 
 
-??
+ーー
 
-??: ????????
+参考: 当時のブログより
 
 
 
-???????????????????????
+発達障害の配慮あり授業がめちゃくちゃ良かった件
 
 https://note.com/robamimim/n/nff576faed57b
 
 
 
-?????????????????????????????????????????????????????????????????
+来年、発達障害の配慮を受けるために、まずは試しに放送大学大学院の試験を受けてきました。なぜなら何を配慮したらいいかわからないのだ！
 
 https://note.com/robamimim/n/nebee9bc41286
 
 
 
-??????????????
+ＷＡＫＡＢＡを解体してみよう
 
-?????2628740
-
-
+科目コード2628740
 
 
 
-???????
+
+
+第５章　まとめ
 
 2024/05/30
 
 
 
-??????????????????????????????????????????
+デジタルツールの活用から出発して、デジタルツールが何をしてくれたかを考え続けてきた。
 
 
 
-??????????????????DIY???????????????????????????????????????????????????????????????????????????????????????????????????????????????
+デジタルツールの良さは自由度が高く、DIY可能なことにあると思う。障害によるハンデは多種多様で個別性が高い。自由度の高いツールであれば自らのハンデにフィットしたツールを選び、作り、調整することができる。そして自分の力を発揮できるようにチューニングすることができる。
 
 
 
-??????IT??????????????????????????????????????????????????
+気がつけば、ITシステムのパフォーマンスチューニングと同じアプローチで自らの障害を巡る問題に対応していたのが面白い。
 
 
 
-20??IT?????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+20代でIT業界に入ったことは幸運だった。ブラック企業を転々とし、難しい事もたくさんあったけど、デジタルツールが豊富にあり、どのように使っても良かった。学習障害、注意欠陥多動障害、コミュニケーション障害に対して、ユニバーサルな環境だった。
 
 
 
-????????????????????????????????????????????????????????????????????????????
+特性が私の足を引っ張り始めたのは、この世界から出ようとしてからだ。個人の持つ障害にどのくらい寛容かは、業界や地域や世代や性別や状況によって大きく変わる。
 
 
 
-?????????????????????????
+だけど、なぜそうなるかが分からずたくさん衝突した。
 
 
 
-??????????????????????????????????????????????????????????????????????????
+人間が何を考えているかを分かりたく、放送大学に入った。最初は混乱するばかりだったが、徐々になぜそうなるかが見えてきて、なんとかなるようになってきた。
 
 
 
-????????????????????????????????????????????????????????????????????????????????????
+学習困難はデジタルツールにより解消しやすい障害だった。読みやすいフォント、計算しやすいフォーマット、時間の見当を構造化するタイマー、スケジュール、リスト、リマインダー。
 
 
 
-???????????????????????????????????????????????????????????????????????????????????????????
+学習困難が解消するにつれ、だんだんと生活の困難さも軽減してきた。構造を解析し、手順のリストを作りリマインドすることで、苦手だった掃除・片付けなどの家事、身だしなみが整うようになった。
 
 
 
-??????????????????????????
+自力では難しい事は、交渉して支援を得ることができた。
 
 
 
-????????????????????????????????????????????
+平行して受けてきた認知行動療法の効果もある。できることとできないことを分けてしまうのだ。
 
 
 
-?????????????????????????????????????????????????????
+朝起きて「嫌だなあ」と思うことが少なくなった。うまくいかないことも交渉して良い結果になることが増えてきた。
 
 
 
-?????????????????????????????????????????????????
+未だ解決していない問題も多い。身体的制約がある。とにかく眠ってしまう。手足がバタバタ動いてしまう。
 
 
 
-???????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+これは解決しないので、それでも良い環境を探すしかないと考えている。例えば、オフィスでの昼寝。イギリスだと大体の会社は一発アウトだそうだ。中国や東南アジアでは眠くなれば布団を敷いて昼寝するという。家に帰って昼寝をするシエスタがある国もある。
 
 
 
-????????????????????????????????????????????????????????????????????????????????????????????
+心理的な問題も未解決だ。小中学校で徹底的に排除されてきたトラウマがある。昭和をサバイバルした同世代の発達障害者に典型的に見られるパターンだ。どれほど多くの人々が苦しんでいることだろう。
 
 
 
-?????????????????????????????????????????????????????????????
+日常のコミュニケーションはこなせるようになったが、心理的駆け引きが必要な状況や、多人数のゲーム状態になるとお手上げである。
 
 
 
-???????????????????????????????????????????????????????????????????????????????
+同じ経験をしていないため共通の話題が少ない。そもそも共感することが難しい。感情を取り違える。裏切りや怒りがなぜ発生したかがわからない。理解できないことが多い。
 
 
 
-????????????????????????????????????????????????????????????????????????????????????????
+人間を観察していると、わずかな体の動き、目線、服装などで、衝突を回避している。ネコみたいだと思う。私にはこれができない。ヒゲを切ったネコみたいにあっちこっちにぶつかってしまう。
 
 
 
-???????????????????
+とにかくあらゆる局面で衝突し消耗する。
 
-????????????????????????
+せっかく良い経験を積んでも簡単に失われてしまう。
 
 
 
-?????????????????????????????????
+放送大学での学びは、困難に対応するバリエーションを増やしてくれた。
 
 
 
-????????????????????????????????????????????????????????????????????????????????????????????????
+障害者権利条約の「私たち抜きで私たちの事を決めるな」という宣言。いろいろな支援を受けてきたが、第三者の利益のために決められた支援ほど不快なものはない。合わない服を無理やり着せられるようだった。
 
 
 
-???????????????????????????????????????????????????????
+そこから、私はこの服が着たいと主張し、自分に合わせて詰めたり伸ばしたりしてちょうどよくできるようになってきた。
 
 
 
-??????????????????????DIY?????????????????????????????????????????????????????
+デジタルツールの良いところは、自由度が高く、DIYも可能で、１からビルドする事も改造もできる事だ。デジタルツールにより、自分でできる体験を積むことができた。
 
 
 
-??????????????????????????????????????
+そうこうしているうちに時代が進み、少しずつ理解を得られやすくなってきている。
 
 
 
-?????????????????????????????????????????????????
+しかし、立派な人を基準とした社会は相変わらずだ。平均的な健常者をすり潰し、障害者を排除してしまう。
 
 
 
-??????????????????????
+教育の場でそれが明確に現れるのはなぜだろう。
 
-??????????????????????????????????????????????????????????????????????????????????????????????????
+親にやる気があり、学校に聞く気がなければ合理的配慮が成立しない。年々通常学級のカットオフ値が上がっているという。多くの子供を排除することをデフォルトとする現在のあり方が良いものだとは到底思えない。
 
 
 
-??????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
+放送大学も障害者にやさしい仕組みではあるが、デフォルトで高度に読み書きができる事を求められる。そして申請して交渉しなければ配慮は得られない。配慮を頂く度に、これを毎回全てのハンデを持つ人が実行できるのかと疑問に思う。少なくとも入学当初の自分には無理だったし、支援が必要だったのは入学当初の自分だった。
 
 
 
-????????????????????????????????????????????????????????????????????????????????
+ユニバーサルな社会が理想だが、そこに至るまでの過程として無数の合理的配慮を得るための試みが必要なのだと思う。その手助けができたら、私の経験が生きるかもしれない。
 
 
 
-????????????????????????????????????????????
+そして無数の合理的配慮の上に、私たちのことを私たちが決める社会が成立すると期待している。
 
 
 
@@ -608,45 +608,45 @@ https://note.com/robamimim/n/nebee9bc41286
 
 
 
-????
+参考文献
 
-1) ?? ??(2021/6/8) ??????-????????? ????? .???????, 731.??????.
+1) 中邑 賢龍(2021/6/8) どの子も違う-才能を伸ばす子育て 潰す子育て .中公新書ラクレ, 731.中央公論新社.
 
-2) ?? ??(2007/12/20) ???????????????????????? ..??????.
+2) 中邑 賢龍(2007/12/20) 発達障害のこどものユニークさを伸ばすテクノロジー ..中央法規出版.
 
-3) ?????????(2019/12/17) ???????????????????????? .????????.???.
+3) 中邑賢龍、近藤武夫(2019/12/17) 発達障害の子を育てる本　スマホ・タブレット活用編 .健康ライブラリー.講談社.
 
-4) ????(2018?1?22?) ???????????????Dyslexia Wheel Japanese version? https://rumihirabayashi.com/dyslexiawheeljapanese/
+4) 平林ルミ(2018年1月22日) 日本版ディスレクシアホイール（Dyslexia Wheel Japanese version） https://rumihirabayashi.com/dyslexiawheeljapanese/
 
 
 
-5) ?? ??, ?? ?(2020) ????????????????????? .?????????.
+5) 江頭 優佳, 岡田 俊(2020) 注意欠如・多動症における時間知覚の最新知見 .日本生理人類学会誌.
 
-6) ?? ???? (?), Sari Solden (??), ?? ??? (??)(2000/5/1) ?????????? .WAVE??.
+6) サリ ソルデン (著), Sari Solden (原名), ニキ リンコ (翻訳)(2000/5/1) 片付けられない女たち .WAVE出版.
 
 
 
-7) ?? ??(2017) ?????????? .??????..
+7) 本田 秀夫(2017) 大人になった発達障害 .認知神経科学..
 
-8) ?? ???(2017) ????????????????????????????????   :?????????? .??????.
+8) 熊谷 晋一郎(2017) 自閉スペクトラム症の社会モデル的な支援に向けた情報保障のデザイン   :当事者研究の視点から .保健医療科学.
 
 
 
-9) ?????(2015?4?) ??????????????? .????????.????.
+9) 石川　憲彦(2015年4月) きいてみよう　障がいってなに？ .えほん、児童向け.ポプラ社.
 
  test
 
-10) ???????????????????????????????(2019) ???????????????????? ..????.
+10) 広瀬　洋子（放送大学特任教授）、関根　千佳（美作大学客員教授）(2019) 情報社会のユニバーサルデザイン（’１９） ..放送大学.
 
-11) ???? ???????????????(2024) ???????????? ..????????.
+11) 篁　倫子 （お茶の水女子大学・名誉教授）(2024) 発達障害の支援は理解から ..放送大学面接授業.
 
 
 
-12) ??? ???????????(2023) ??????? .????.
+12) 星　薫 （放送大学客員准教授）(2023) 英語で心理学４ .放送大学.
 
 13) STEVEN K. SHAPIRO AND ANDREW L. COHEN (December 17, 2007) ATTENTION-DEFICIT / HYPERACTIVITY DISORDER / Myth or Mental Disorder?  .21st Century PSYCHOLOGY.SAGE Publications.
 
-14) ?????????????(2021) ??????????????? .????.
+14) 古賀　精治（大分大学教授）(2021) 障害者・障害児心理学（’２１） .放送大学.
 
 
 
