Update from Google Doc

--- a/卒論_0607.md
+++ b/卒論_0607.md
@@ -1,4 +1,4 @@
-第１章 卒論を書く目的
+# 第１章 卒論を書く目的
 
 2024/05/22
 
@@ -72,15 +72,15 @@
 
 
 
-発達障害の概念
+## 発達障害の概念
 
 あとでかく
 
-欧米の発達障害の経緯 (12,13)
+## 欧米の発達障害の経緯 (12,13)
 
 あとでかく
 
-日本の発達障害の経緯 (14)
+## 日本の発達障害の経緯 (14)
 
 あとでかく
 
@@ -88,7 +88,7 @@
 
 
 
-第２章　先行研究
+# 第２章　先行研究
 
 2024/05/28
 
@@ -150,7 +150,7 @@
 
 
 
-各章の感想
+### 各章の感想
 
 長くなるのでリンク先に分けました
 
@@ -158,7 +158,7 @@
 
 
 
-第３章　自分の体験に基づいて
+# 第３章　自分の体験に基づいて
 
 2024/05/29
 
@@ -178,17 +178,17 @@
 
 
 
-１. DSM5の分類を参考に、困難を分類して考える
+## １. DSM5の分類を参考に、困難を分類して考える
 
 
 
-①知的障害
+### ①知的障害
 
 調子が悪い時に計ったらIQ50となった事がある。この時は図形も読み書きもまるで無理だった。トラブルが起きても対処しきれず雪だるま式に問題が膨れ上がる。こういう時は、焦るけれど動かないほうがいいとだんだん分かってきた。問題は１日の中で頻繁にダウンしている時間とアップしている時間がある事だ。目の前の人が一生懸命説明してるのに、ダウンしている時はまったく理解できない。それを悟られないように必死で愛想よくふるまう。これがトラブルを呼び込んでしまう。なので、なるべくアップしている時しか人に会わないようにしている。なかなか理解されることがない。
 
 
 
-②学習障害
+### ②学習障害
 
 ・文字が踊って読めなくなる事がある。だけど読書は大好きだ。電子書籍だとフォントや背景色を変えられるので大変助かる。放送大学の教材はスマートフォンで写真にとって読んでいたが、一昨年からテキストデータで教材をもらえる事になり学習のハードルがぐんとさがった。紙の本も環境が良ければ読める。
 
@@ -202,7 +202,7 @@
 
 
 
-③コミュニケーション障害
+### ③コミュニケーション障害
 
 ・とても苦労している。顔と名前が覚えられない、気が利かない、空気を読まず行動した結果、顔を潰してしまう。裏切りや攻撃に気が付かない。協調した行動がとれない。いつのまにか一人になっている。
 
@@ -228,7 +228,7 @@
 
 
 
-④自閉症スペクトラム
+### ④自閉症スペクトラム
 
 ・列車がすき、規則性がすき、こだわりが強い、感覚過敏がある。パジャマは数年同じものを着ている。気に入った服をいつでも着ていたい。メイクが苦手だ。なるべく自分が良いようにして、人と会うときはなるべく合わせる。合わせるべきハードルが高い場、例えば式典にはなるべく出ない。
 
@@ -242,7 +242,7 @@
 
 
 
-④ADHD
+### ④ADHD
 
 ・気を抜くと手足がばたばたしている。アメリカに行ったら多動が目立たないのが面白かった。気をまぎらわす手遊びグッズ、薬も効いている。
 
@@ -252,11 +252,11 @@
 
 
 
-⑤二次障害
+### ⑤二次障害
 
 かつてあった事が、今ここであった事のように割り込みをかけてくる事がある。これには投薬が効いていて驚いた。カウンセリングも受けている。
 
-⑤その他、複合的な要因
+### ⑤その他、複合的な要因
 
 ・時間感覚の欠如が最も困難だと感じている。時間に遅れる、早まる、日程を間違う、スケジュールを立てられない、いつも焦って時間に追われる感じがしてイライラしてしまう、など。このため数年かけて、タイマーで日常動作を測って必要な時間を割り出し、タスクリストを作りリマインドを自動化し、定期的にスケジュールを確認しタスクを最適化するようにしている。これらのツールが使えないと、あっという間に元通りである。もしかして人類の感覚のうち時計ができてから進化がはじまった後発の感覚だからかもしれない。そして、デジタルツールにより解決しやすいのも、時間感覚の欠如だった。後述する。(→自分自身のデジタルツール活用体験記）
 
@@ -274,7 +274,7 @@
 
 
 
-デジタルツールで解消しやすい障害、解消しにくい障害
+### デジタルツールで解消しやすい障害、解消しにくい障害
 
 (2024/05/31追記)
 
@@ -290,7 +290,7 @@
 
 ーーーーー
 
-２.
+## ２.
 
 内容いっしょなのでリンクのみ
 
@@ -300,7 +300,7 @@
 
 
 
-第４章　放送大学
+# 第４章　放送大学
 
 2024/05/30
 
@@ -326,7 +326,7 @@
 
 
 
-入学当初の混乱
+## 入学当初の混乱
 
 
 
@@ -368,7 +368,7 @@
 
 
 
-合理的配慮により困難が解消した
+## 合理的配慮により困難が解消した
 
 
 
@@ -418,7 +418,7 @@
 
 （2024/05/31、6/1追記）
 
-放送大学への提案
+## 放送大学への提案
 
 放送大学のテキストデータと音声教材の組み合わせは、私の学習障害に対し特効薬のように効いた。これが10代の頃にあれば、ハンデなく受験や進学に活かせたと思う。20代の最初の大学生活においても予め放送大学で予習しておけば、混乱することもなかったのではと思う。
 
@@ -476,7 +476,7 @@ https://note.com/robamimim/n/nebee9bc41286
 
 
 
-第５章　まとめ
+# 第５章　まとめ
 
 2024/05/30
 
@@ -608,7 +608,7 @@ https://note.com/robamimim/n/nebee9bc41286
 
 
 
-参考文献
+# 参考文献
 
 1) 中邑 賢龍(2021/6/8) どの子も違う-才能を伸ばす子育て 潰す子育て .中公新書ラクレ, 731.中央公論新社.
 
@@ -647,6 +647,8 @@ https://note.com/robamimim/n/nebee9bc41286
 13) STEVEN K. SHAPIRO AND ANDREW L. COHEN (December 17, 2007) ATTENTION-DEFICIT / HYPERACTIVITY DISORDER / Myth or Mental Disorder?  .21st Century PSYCHOLOGY.SAGE Publications.
 
 14) 古賀　精治（大分大学教授）(2021) 障害者・障害児心理学（’２１） .放送大学.
+
+
 
 
 
