Update from Google Doc

--- a/卒論_0607.md
+++ b/卒論_0607.md
@@ -36,7 +36,7 @@
 
 
 
-この頃は、デジタルツールもたいしたものは使っていない。せいぜい教科書をスキャンしてiPADにいれていたくらいだ。この頃は学習障害について意識はしていなく、紙は読みにくいので当然のようにスキャンしていたにすぎない。そのうち面倒になってラジオ科目だけを流し聞きして試験はギリギリで通ったり、落ちたり、試験会場に辿り着かなかったりしていた。
+この頃は、デジタルツールもたいしたものは使っていない。せいぜい教科書をスキャンしてiPadにいれていたくらいだ。この頃は学習障害について意識はしていなく、紙は読みにくいので当然のようにスキャンしていたにすぎない。そのうち面倒になってラジオ科目だけを流し聞きして試験はギリギリで通ったり、落ちたり、日時と場所を間違えて試験会場に辿り着かなかったりしていた。
 
 
 
@@ -60,7 +60,7 @@
 
 ・並行して受けた認知行動療法が効いた
 
-・難しい事をデジタルツールの活用でクリアする事が面白かった
+・難しい事をデジタルツールの活用でクリアする事がゲーム感覚で面白かった
 
 
 
@@ -74,7 +74,33 @@
 
 ## 発達障害の概念
 
-あとでかく
+発達障害の定義とは、厚労省の定義によれば、次のようになる。
+
+
+
+"みんなのメンタルヘルス（厚労省）
+
+
+
+発達障害は、生まれつき脳の発達が通常と違っているために、幼児のうちから症状が現れ、通常の育児ではうまくいかないことがあります。成長するにつれ、自分自身のもつ不得手な部分に気づき、生きにくさを感じることがあるかもしれません。
+
+
+
+ですが、発達障害は「先天的なハンディキャップ」ではなく、「一生発達しない」のでもありません。発達の仕方が通常の子どもと異なっていますが、支援のあり方によって、それがハンディキャップになるのかどうかが決まるといえます。
+
+"
+
+
+
+海外では、
+
+医学的には知的障害と発達障害が重なっている
+
+日本では発達障害は福社の対象で定義されている
+
+
+
+
 
 ## 欧米の発達障害の経緯 (12,13)
 
@@ -90,8 +116,6 @@
 
 # 第２章　先行研究
 
-2024/05/28
-
 
 
 先行研究として中邑賢龍の発達障害の子を育てる本をとりあげたい。
@@ -100,11 +124,11 @@
 
 子供の発達障害の本は種類も量も豊富でとても参考になる。
 
-しかし、「そうなる前に、その子に合った学び方を考えましょう。」のように、大人の当事者が読むには辛い記述がよくある。心して読む必要がある。
+しかし、この本のまえがきのように、「そうなる前に、その子に合った学び方を考えましょう。 (中邑 & 近藤, 2019, 1)」大人の当事者が読むには辛い記述がよくある。心して読む必要がある。
 
 
 
-この本には、生活、学習、将来、社会、さまざまな困難をデジタルツールを活用する事でどんどん解決し、その子の能力を発揮していきいきと人生を歩む姿が描かれていた。
+この本には、生活、学習、将来、社会、さまざまな困難をデジタルツールを活用する事でどんどん解決し、その子の能力を発揮していきいきと人生を歩む姿が描かれていた。１回目に読んだ時は、ほんとうに今の子供たちがうらやましいと思った。
 
 
 
@@ -122,7 +146,7 @@
 
 
 
-この子はダメだとがっかりしている親にとって希望を持てるように励ましつづける内容になっている。一方で、現在の学校教育に参加するために、当事者とその親にたいへんな努力を要求している。学校側もさまざまな配慮を行う必要がある。
+主に、この子はダメだとがっかりしている親にとって希望を持てるように励ましつづける内容になっている。一方で、現在の学校教育に参加するために、当事者とその親にたいへんな努力を要求している。学校側もさまざまな配慮を行う必要がある。
 
 
 
@@ -130,11 +154,15 @@
 
 
 
-合理的配慮の解説では、これを求めるプロセスが「私たちのことを私たち抜きで決めないで（Nothing About us without us）」そのものだと思った。
+合理的配慮の解説では、これを求めるプロセスが、障害者権利条約の「私たちのことを私たち抜きで決めないで （Nothing About us without us）」(内閣府, 平成26年)そのものだと思った。
 
 
 
-しかし、ユニバーサルではないカリキュラムに参加するには、後付けでとてつもない手間とお金がかかる。しかも、親にやる気がなければ子どもは支援を受けられない。
+しかし、現行のカリキュラムに参加するには、この本のとおりだとすると、大変な手間がかかる。しかも、親にやる気がなければ子どもは支援を受けられない。
+
+
+
+この現状が良いものだとは到底思えない。
 
 
 
@@ -146,13 +174,13 @@
 
 
 
-自分自身、何度も「配慮」をお願いすることに心理的負担を感じている。近年、「合理的配慮ではなく、合理的調整と呼ぶべき」という意見を読み、自分自身もへり下ってお願いをする「配慮」に負担を感じているなと思った。
+自分自身、何度も「配慮」をお願いすることに心理的負担を感じている。近年、「合理的配慮ではなく、合理的調整と呼ぶべき」という意見を読み、自分自身もへり下ってお願いをする「配慮」に負担を感じていることに気付かされた。
 
 
 
 ### 各章の感想
 
-長くなるのでリンク先に分けました
+＜長くなるのでリンク先に分けました＞
 
 
 
@@ -160,25 +188,11 @@
 
 # 第３章　自分の体験に基づいて
 
-2024/05/29
+## １. DSM5の分類を参考に困難を分類する
 
 
 
-1. 発達障害による困難
-
-2. のりこえられたもの
-
-3. ICTでのりこえられたもの
-
-4. 合理的配慮でのりこえられたもの
-
-
-
-——
-
-
-
-## １. DSM5の分類を参考に、困難を分類して考える
+まず、自己の体験を日記から書き出した。書きだされたエピソードをDSM-5の分類に従って知的障害、学習障害、コミュニケーション障害、自閉症スペクトラム、ADHD、２次障害、その他に分けた。そして、各項目毎に、1. 発達障害による困難、2. のりこえられたもの、3. ICTでのりこえられたもの、4. 合理的配慮でのりこえられたもの、5.のりこえられなかったもの をそれぞれ検討した。エピソードのうち、学習障害と時間感覚の欠如はデジタルツールとの相性がよかった。これらをとしてまとめた。
 
 
 
@@ -252,13 +266,19 @@
 
 
 
+・時間感覚の欠如が最も困難だと感じている。時間に遅れる、早まる、日程を間違う、スケジュールを立てられない、いつも焦って時間に追われる感じがしてイライラしてしまう、など。このため数年かけて、タイマーで日常動作を測って必要な時間を割り出し、タスクリストを作りリマインドを自動化し、定期的にスケジュールを確認しタスクを最適化するようにしている。これらのツールが使えないと、あっという間に元通りである。もしかして人類の感覚のうち時計ができてから進化がはじまった後発の感覚だからかもしれない。そして、デジタルツールにより解決しやすいのも、時間感覚の欠如だった。
+
+
+
+・よく電車を乗り間違う。広告が面白くて、景色がよくて、おしゃべりが気になって降り損なう。飛行機や新幹線に何度も遅れている。
+
+
+
 ### ⑤二次障害
 
 かつてあった事が、今ここであった事のように割り込みをかけてくる事がある。これには投薬が効いていて驚いた。カウンセリングも受けている。
 
-### ⑤その他、複合的な要因
-
-・時間感覚の欠如が最も困難だと感じている。時間に遅れる、早まる、日程を間違う、スケジュールを立てられない、いつも焦って時間に追われる感じがしてイライラしてしまう、など。このため数年かけて、タイマーで日常動作を測って必要な時間を割り出し、タスクリストを作りリマインドを自動化し、定期的にスケジュールを確認しタスクを最適化するようにしている。これらのツールが使えないと、あっという間に元通りである。もしかして人類の感覚のうち時計ができてから進化がはじまった後発の感覚だからかもしれない。そして、デジタルツールにより解決しやすいのも、時間感覚の欠如だった。後述する。(→自分自身のデジタルツール活用体験記）
+### ⑤その他
 
 
 
@@ -270,13 +290,11 @@
 
 
 
-・電車を乗り間違う。広告が面白くて、景色がよくて、おしゃべりが気になって降り損なう。飛行機や新幹線に何度も遅れている。
 
 
+## ２.
 
-### デジタルツールで解消しやすい障害、解消しにくい障害
-
-(2024/05/31追記)
+## ３.デジタルツールで解消しやすい障害、解消しにくい障害
 
 以上をざっくりまとめると次のようになった。
 
@@ -288,21 +306,7 @@
 
 
 
-ーーーーー
-
-## ２.
-
-内容いっしょなのでリンクのみ
-
-ーーーーー
-
-
-
-
-
 # 第４章　放送大学
-
-2024/05/30
 
 
 
@@ -478,8 +482,6 @@ https://note.com/robamimim/n/nebee9bc41286
 
 # 第５章　まとめ
 
-2024/05/30
-
 
 
 デジタルツールの活用から出発して、デジタルツールが何をしてくれたかを考え続けてきた。
@@ -604,55 +606,29 @@ https://note.com/robamimim/n/nebee9bc41286
 
 
 
-
-
-
-
 # 参考文献
 
-1) 中邑 賢龍(2021/6/8) どの子も違う-才能を伸ばす子育て 潰す子育て .中公新書ラクレ, 731.中央公論新社.
-
-2) 中邑 賢龍(2007/12/20) 発達障害のこどものユニークさを伸ばすテクノロジー ..中央法規出版.
-
-3) 中邑賢龍、近藤武夫(2019/12/17) 発達障害の子を育てる本　スマホ・タブレット活用編 .健康ライブラリー.講談社.
-
-4) 平林ルミ(2018年1月22日) 日本版ディスレクシアホイール（Dyslexia Wheel Japanese version） https://rumihirabayashi.com/dyslexiawheeljapanese/
 
 
+※引用と文献情報を追加する方法
 
-5) 江頭 優佳, 岡田 俊(2020) 注意欠如・多動症における時間知覚の最新知見 .日本生理人類学会誌.
+Google ドキュメント > [ツール] > [引用] >[参考文献リストを挿入]
 
-6) サリ ソルデン (著), Sari Solden (原名), ニキ リンコ (翻訳)(2000/5/1) 片付けられない女たち .WAVE出版.
-
-
-
-7) 本田 秀夫(2017) 大人になった発達障害 .認知神経科学..
-
-8) 熊谷 晋一郎(2017) 自閉スペクトラム症の社会モデル的な支援に向けた情報保障のデザイン   :当事者研究の視点から .保健医療科学.
-
-
-
-9) 石川　憲彦(2015年4月) きいてみよう　障がいってなに？ .えほん、児童向け.ポプラ社.
-
- test
-
-10) 広瀬　洋子（放送大学特任教授）、関根　千佳（美作大学客員教授）(2019) 情報社会のユニバーサルデザイン（’１９） ..放送大学.
-
-11) 篁　倫子 （お茶の水女子大学・名誉教授）(2024) 発達障害の支援は理解から ..放送大学面接授業.
-
-
-
-12) 星　薫 （放送大学客員准教授）(2023) 英語で心理学４ .放送大学.
-
-13) STEVEN K. SHAPIRO AND ANDREW L. COHEN (December 17, 2007) ATTENTION-DEFICIT / HYPERACTIVITY DISORDER / Myth or Mental Disorder?  .21st Century PSYCHOLOGY.SAGE Publications.
-
-14) 古賀　精治（大分大学教授）(2021) 障害者・障害児心理学（’２１） .放送大学.
+https://support.google.com/docs/answer/10090962?hl=ja&co=GENIE.Platform%3DDesktop
 
 
 
 
 
 
+
+References
+
+内閣府. (2014, 8 10). 平成26年版 障害者白書（全体版）. 第１章 障害者施策の新たな展開. Retrieved June 3, 2024, from https://www8.cao.go.jp/shougai/whitepaper/h26hakusho/zenbun/h1_01_03_02.html
+
+「合理的配慮ではなく、合理的調整と呼ぶべき」芥川賞受賞作「ハンチバック」著者、市川沙央さんインタビュー. (2024, 4 2024). 障害者.com. Retrieved 6 3, 2024, from https://shohgaisha.com/column/grown_up_detail?id=3038
+
+中邑, 賢., & 近藤, 武. (2019). 発達障害の子を育てる本スマホ・タブレット活用編. 講談社.
 
 
 
