Update from Google Doc

--- a/卒論_0607.md
+++ b/卒論_0607.md
@@ -4,35 +4,19 @@
 
 
 
-筆者はこれまで、発達障害によるさまざまなハンデをデジタルツールの活用で埋め合わせをしようと努力してきた。それにより改善した困難についてまとめてみたいと思い、卒論を書くことにした。
+筆者はこれまで、発達障害によるさまざまなハンデをデジタルツールの活用で埋め合わせをしようと努力してきた。それにより改善した困難についてまとめてみたいと思い、卒論を書くことにした。元々プログラミングが好きで、ツールをあれこれ試すのが楽しくて、どんどん進めてきた面がある。しかし、困っている人にすすめると大抵「何を言っているんだ?」とポカンとされてきた。そんな訳で、自分には有用でも人の役には立たないだろうと思っていた。
 
 
 
-元々プログラミングが好きで、ツールをあれこれ試すのが楽しくて、どんどん進めてきた面がある。しかし、困っている人にすすめると大抵「何を言っているんだ?」とポカンとされてきた。そんな訳で、自分には有用でも人の役には立たないだろうと思っていた。
+それに対し、広瀬先生のアドバイスは「エベレストに登った人の話が面白いようにマニアックな話の中に面白さがある」という事だった。そうして思い出してみると、やはり20代でIT業界に入ったことの影響が大きい。確かにブラック企業ばかりで問題はたくさんあった。そうした現場で愛想笑いをして可愛がられ、問題を起こしては追い出され、時にはチャンスをつかみ、あっという間に蹴落とされ、あるいは呼ばれて掛け持ちし、休む間もなく働いた時期もあった。
 
 
 
-それに対し、広瀬先生のアドバイスは「エベレストに登った人の話が面白いようにマニアックな話の中に面白さがある」という事だった。
+デジタルツールが豊富にあり、どのように使っても良かった。問題があればデジタルツールを駆使しプログラムを書き、何でもDIYで解決した。学習障害、注意欠陥多動障害、コミュニケーション障害に対してユニバーサルな環境だった。プログラマーは紙が苦手だよねと書類仕事を免除され、少々のずれや身だしなみや礼儀作法を見逃してもらえるとうまく働ける。しかし、運良く理解が得られても、人事異動や環境の変化で簡単に失われてしまう。
 
 
 
-そうして思い出してみると、やはり20代でIT業界に入ったことの影響が大きい。確かにブラック企業ばかりで問題はたくさんあった。そうした現場で愛想笑いをして可愛がられ、問題を起こしては追い出され、時にはチャンスをつかみ、あっという間に蹴落とされ、あるいは呼ばれて掛け持ちし、休む間もなく働いた時期もあった。
-
-
-
-デジタルツールが豊富にあり、どのように使っても良かった。問題があればデジタルツールを駆使しプログラムを書き、何でもDIYで解決した。学習障害、注意欠陥多動障害、コミュニケーション障害に対してユニバーサルな環境だった。
-
-
-
-プログラマーは紙が苦手だよねと書類仕事を免除され、少々のずれや身だしなみや礼儀作法を見逃してもらえるとうまく働ける。しかし、運良く理解が得られても、人事異動や環境の変化で簡単に失われてしまう。
-
-
-
-それがいやでIT業界からすっかり足を洗って、営業、農業、ボランティア、研究、福祉、またIT、結局どこにいっても同様の問題が壁となった。人間関係がどうにもならないのだ。そこで人間の気持ちをわかるために放送大学に入り、心理の勉強を始めた。
-
-
-
-ここでの壁は申請、申請、申請だった。いつも何が何だかさっぱりわからず混乱していた。困り果てて相談に行った事もあったが、大学の授業程度の読み書きができる人が対象だから読んでわからなければダメですねと、追い返されてしまった。
+それがいやでIT業界からすっかり足を洗って、営業、農業、ボランティア、研究、福祉、またIT、結局どこにいっても同様の問題が壁となった。人間関係がどうにもならないのだ。そこで人間の気持ちをわかるために放送大学に入り、心理の勉強を始めた。ここでの壁は申請、申請、申請だった。いつも何が何だかさっぱりわからず混乱していた。困り果てて相談に行った事もあったが、大学の授業程度の読み書きができる人が対象だから読んでわからなければダメですねと、追い返されてしまった。
 
 
 
@@ -40,35 +24,15 @@
 
 
 
-数年がたち、障害者・障害児心理学を履修したとき「合理的配慮を申請すればいいのでは・・・？」と思いつき、相談したところ、今度は無事配慮を受けることができた。
+数年がたち、障害者・障害児心理学を履修したとき「合理的配慮を申請すればいいのでは・・・？」と思いつき、相談したところ、今度は無事配慮を受けることができた。苦手としていた申請関係も、こうしたい希望が、申請一式で実現できているかをチェックしてもらうことでクリアすることができた。（４章 放送大学）
 
 
 
-苦手としていた申請関係も、こうしたい希望が、申請一式で実現できているかをチェックしてもらうことでクリアすることができた。（４章 放送大学）
+苦手な事をリストアップし積極的に解消していくのもこの頃からだ。この時に力になったのがデジタルツールだった。（３章 自分の体験）その後は、びっくりするほどスムーズに学習が進んだ。心理の学習が進んだことで、人間の特性を大まかに理解した。並行して受けた認知行動療法が効いた。難しい事をデジタルツールの活用でクリアする事がゲーム感覚で面白かった。これらの要因がうまく噛み合ってきたのでは？と考えている。そして、いま運良くまとまった時間があるので、これらが何故うまくいったのかを分析し、改善した事や改善していない事をまとめて、後続の皆様の一助となれたら幸いだと考えている。
 
 
 
-苦手な事をリストアップし積極的に解消していくのもこの頃からだ。この時に力になったのがデジタルツールだった。（３章 自分の体験 ）
-
-
-
-その後は、びっくりするほどスムーズに学習が進んだ。
-
-
-
-・心理の学習が進んだことで、人間の特性を大まかに理解した
-
-・並行して受けた認知行動療法が効いた
-
-・難しい事をデジタルツールの活用でクリアする事がゲーム感覚で面白かった
-
-
-
-これらの要因がうまく噛み合ってきたのでは？と考えている。
-
-
-
-そして、いま運良くまとまった時間があるので、これらが何故うまくいったのかを分析し、改善した事や改善していない事をまとめて、後続の皆様の一助となれたら幸いだと考えている。
+発達障害によるハンデをデジタルツールで克服しようと努力し、IT業界や学習における困難を乗り越えた経験を基に、心理学を学びながら合理的配慮を得ることでさらに学習が進み、それを卒論にまとめることで後続の役に立ちたいと考えている。
 
 
 
